--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ main #portfolio li {
 
 main #portfolio::before {
     content: "";
-    display:Block;
+    display:none;
     width:90%;
     height:1px;
     background-color:#cccccc;
@@ -133,6 +133,30 @@ main #portfolio .title-section {
     align-items: center;
     transition:.3s ease-in-out;
 }
+
+main #portfolio-search-bar {
+    width:100%;
+    padding:100px 130px 0px 130px;
+}
+
+main #portfolio-search-bar h4 {
+    color: var(--blue-color);
+    font-size: 20px;
+    font-weight:700;
+}
+
+main #portfolio-search-bar .search-bar input {
+    width:700px;
+    padding:10px 5px;
+}
+
+main #portfolio-search-bar .search-bar i {
+    display:inline-block;
+    color:var(--white-color);
+    padding:16px 20px;
+    background-color: var(--blue-color);
+}
+
 main #blog-section {
     display:none!important;
     position:relative;
@@ -291,6 +315,50 @@ main #portfolio .porfolio-info a:hover {
 main #portfolio .portfolio-info a i {
     margin-right:10px;
 }
+
+main #portfolio .pagination {
+    display:inline-block;
+    text-align: right;
+    width:100%;
+    padding:40px 0px 0px 0px;
+    font-size:18px;
+    color:var(--blue-color);
+}
+
+main #portfolio .pagination a {
+    padding:0px 0px 0px 10px;
+    margin:0;
+    color:var(--blue-color);
+    text-decoration: none;
+}
+
+main #portfolio .pagination a:hover {
+    text-decoration: underline;
+}
+
+main #contact-bar {
+    background-color: var(--blue-color);
+    padding: 150px 130px 150px 130px;
+}
+main #contact-bar h4 {
+    color:var(--white-color);
+    font-size:18px;
+}
+main #contact-bar a {
+    text-align:center;
+    width:220px;
+    display:inline-block;
+    color:var(--blue-color);
+    background-color:var(--white-color);
+    padding:20px 50px;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+main #contact-bar a:hover {
+    text-decoration: underline;
+}
+
 main #visual-rest {
     box-sizing: border-box;
     display:block;
@@ -522,11 +590,7 @@ footer #copyright-text a {
         align-items: center;
     }
 
-    main #portfolio .pagination {
-        text-align:right;
-        padding:20px 0px;
-        font-size:18px;
-    }
+    
 
     main #portfolio #portfolio-title {
         padding:0px 30px 30px 30px;
